# UJN_Java_project

./: .gitignore  README.md  docker-compose.yml  pom.xml
.claude/: settings.local.json
docs/: 01-architecture.md  02-features-and-principles.md  03-ble-technical.md  04-wifi-csi-technical.md  05-development-progress.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/components/: BleDeviceRadar.vue  BleDeviceTable.vue  BlePanel.vue  BleSpectrumChart.vue  CsiAlertList.vue  CsiHeatmap.vue  CsiMotionChart.vue  CsiPanel.vue
frontend/src/composables/: useECharts.js  useWebSocket.js
python-engine/: main.py  pyproject.toml
python-engine/src/api/: ble_routes.py  csi_routes.py  deps.py
python-engine/src/ble/: analyzer.py  models.py  parser.py  scanner.py
python-engine/src/core/: config.py  events.py  models.py
python-engine/src/csi/: detector.py  loader.py  models.py  parser.py  processor.py
python-engine/src/stream/: sse.py
src/main/java/com/zzb/mysite/: MysiteApplication.java
src/main/java/com/zzb/mysite/client/: PythonClient.java
src/main/java/com/zzb/mysite/controller/: BleController.java  CsiController.java  SettingsController.java
src/main/java/com/zzb/mysite/model/: AppSettings.java  BleSnapshot.java  CsiAlert.java  DeviceInfo.java
src/main/resources/: application.properties  application.yaml
src/main/resources/static/: index.html
src/main/resources/static/assets/: index-C_JPa_-n.js  index-QIo6HbeU.css
src/test/java/com/zzb/mysite/: MysiteApplicationTests.java
(+7 files in other folders)
