[project]
name = "wireless-engine"
version = "0.1.0"
description = "Python DSP engine: BLE spectrum sensing & CSI signal analysis"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "bleak>=0.22.0",
    "numpy>=2.1.0",
    "scipy>=1.15.0",
    "csikit>=2.4.0",
    "pydantic>=2.10.0",
    "sse-starlette>=2.0.0",
]

[tool.uv]
dev-dependencies = [
    "httpx>=0.28.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
]
